Fixed #1 Configure the number of Hydra workers

--- a/src/org/jetbrains/plugins/scala/compiler/HydraCompilerConfigurationPanel.form
+++ b/src/org/jetbrains/plugins/scala/compiler/HydraCompilerConfigurationPanel.form
@@ -89,6 +89,20 @@
             </constraints>
             <properties/>
           </component>
+          <component id="9b874" class="org.jetbrains.sbt.project.template.SComboBox" binding="noOfCoresComboBox">
+            <constraints>
+              <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="cfbaa" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Number of cores"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
